--- a/css/customStyles.css
+++ b/css/customStyles.css
@@ -34,6 +34,22 @@ h3 {
 	height: 100vh;
 	position: relative;
 }
+#overlay {
+    position: absolute;
+    bottom: 40px;
+    left: 30%;
+    width: 60%;
+    height: 6%;
+    background-color: #000;
+    color: red;
+    filter:alpha(opacity=50);
+    -moz-opacity:0.5;
+    -khtml-opacity: 0.5;
+    opacity: 0.5;
+    z-index: 10000;
+    text-align: center;
+    padding-top: 15px;
+}
 
 #map {
 	bottom:0px;
